[package]
name = "markrequests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
git2 = "0.18.1"
itertools = "0.12.0"
maplit = "1.0.2"
markdown = "1.0.0-alpha.16"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
std_prelude = "0.2.12"
